# Astro-Guard

./: README.md  pyproject.toml  run_app.bat  show_remote_test_info.py  streamlit_app.py
.github/: FUNDING.yml
bkzs_guard/: __init__.py  config.py  control.py  deception.py  decision_feed.py  lab_transport.py  models.py  policy.py  relay.py  satellites.py  utils.py
bkzs_guard/adapters/: __init__.py  base.py  demo.py  esp32.py  esp8266.py  network.py  peer.py
bkzs_guard/attack_lab/: __init__.py  scenarios.py
bkzs_guard/pipeline/: __init__.py  engine.py  layers.py  state.py
esp32_node/: README.md
esp32_node/BKZS_ESP32_Sender/: BKZS_ESP32_Sender.ino  bkzs_esp32_profile.h  bkzs_wifi_secrets.h
esp8266_node/: README.md
esp8266_node/BKZS_ESP8266_Sender/: BKZS_ESP8266_Sender.ino  bkzs_esp8266_profile.h  bkzs_wifi_secrets.h
remote_attack_node/: README.md  attack_console.py  attack_target_profile.json  normal_sender.py  profile_loader.py  relay_sink.py  remote_signal_client.py  run_console.bat  run_examples.bat
samples/: mission_envelope.json  trust_bulletin.json
tests/: test_attack_lab.py  test_control.py  test_decision_feed.py  test_esp32_adapter.py  test_esp8266_adapter.py  test_lab_transport.py  test_network_adapter.py  test_pipeline.py  test_remote_signal_client.py
