[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bkzs-guard"
version = "0.1.0"
description = "Micro-layered BKZS anti-spoofing demo platform with Streamlit UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
]

[tool.setuptools.packages.find]
include = ["bkzs_guard*"]
